src/test/ui/suggestions/issue-51244.stderr
error[E0594]: cannot assign to immutable borrowed content `*my_ref`
  --> $DIR/issue-51244.rs:13:5
   |
LL |     let ref my_ref @ _ = 0;
   |         -------------- help: use a mutable reference instead: `ref mut my_ref @ _`
LL |     *my_ref = 0; //~ ERROR cannot assign to immutable borrowed content `*my_ref` [E0594]
   |     ^^^^^^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
